--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,3 +24,26 @@
         transform: rotate(360deg) translateX(150px) rotate(-360deg)
     }
 }
+
+::-webkit-scrollbar {
+    width: 5px;
+    max-height: 5px;
+    background: #2A1E14;
+}
+
+::-webkit-scrollbar-thumb {
+    background: linear-gradient(45deg, #D97706, #B45309);
+    border-radius: 10px;
+}
+
+.line-clamp-2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+button {
+    cursor: pointer;
+}
